# sanctuary-seeder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
res/json/: AreaData.json  ExploreAbilities.json  ExploreActions.json  MonsterAreas.json  MonsterJournalList.json  MonsterTypes.json  Relics.json  SwimmingMonsterList.json
res/setup/: setup.iss
res/tables/: Bravery.sql  Relic.sql
src/: data.rs  lib.rs  main.rs  structs.rs  ui.rs
src/seed_finder/: db.rs
src/structs/: game.rs  game_data.rs  game_manager.rs  map.rs  modes.rs  monster.rs  relic.rs
src/structs/modes/: bravery.rs  randomizer.rs  relic.rs
src/ui/: condition.rs  dialog.rs  display.rs  enums.rs  finder.rs  request.rs  seed_info.rs
src/ui/enums/: condition.rs  effect.rs  value.rs
tests/: seed.rs
tests/seeds/all_modes/: 0.json  20128.json  32410.json  779938.json  999999.json
tests/seeds/bravery_relic/: 0.json  20128.json  32410.json  779938.json  999999.json
tests/seeds/randomizer_relic/: 0.json  20128.json  32410.json  779938.json  999999.json
tests/seeds/relic/: 0.json  20128.json  32410.json  779938.json  999999.json
ui/: appwindow.slint
ui/components/: custom_combo_box.slint  monster_box.slint  relic_display_info.slint
ui/widgets/: area.slint  area_selector.slint  game_info.slint
ui/widgets/tabs/: about_tab.slint  areas_tab.slint  bravery_tab.slint  seed_finder_tab.slint
