[package]
version = "1.0.0"
edition = "2021"
license = "MIT"

name = "sanctuary-seeder"
description = "A seed finder and checker for Monster Sanctuary."

authors = ["Minavoii"]
repository = "https://github.com/Minavoii/sanctuary-seeder"
readme = "README.md"

build = "build/main.rs"

[dependencies]
slint = "1.7.2"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
rmp-serde = "1.3.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
image = "0.25.2"
unity-random = "1.0.0"

[build-dependencies]
slint-build = "1.7.2"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
rmp-serde = "1.3.0"
texture_packer = "0.29.0"
image = "0.25.2"
winresource = "0.1.17"
